--- a/operatorlar.html
+++ b/operatorlar.html
@@ -8,6 +8,7 @@
   <title>operatorlar</title>
   <script src="./opretorlar.js"></script>
 </head>
+<h1>git end lesson </h1>
 <p style="text-align: center;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, aliquid!</p>
 
 <body>
